--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,4 +39,16 @@
         app:layout_constraintHorizontal_bias="0.507"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <Button
+        android:id="@+id/bypassButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="bypass"
+        android:onClick="byPass"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/signupButton" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
